[package]
name = "allfarbe"
description = "A Rust Desktop Background Project"
version = "0.1.0"
authors = ["Luis Hoderlein <lrh74@cornell.edu>"]
edition = "2018"

repository = "https://github.com/khemritolya/allfarbe/"
exclude = [
    ".github/previews/*"
]
license = "MIT"
license-file = "LICENSE"

[dependencies]
glium = "*"
noise = "0.6.0"